--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "biome check --fix"
   },
   "dependencies": {
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-slot": "^1.2.3",
     "@rainbow-me/rainbowkit": "^2.2.8",
     "@rainbow-me/rainbowkit-siwe-next-auth": "^0.5.0",
