--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 REACT_EDITOR=atom
 NEXT_PUBLIC_CONTRACT_ADDRESS = '0x10Cbb82ec61E8FA0766b3976092878EfEd55C516'
+
+# 忽略构建时的 TypeScript 错误
+NEXT_TYPESCRIPT_IGNORE_BUILD_ERRORS=true
